详情页参数相关

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -3,7 +3,7 @@
 :root {
   --color-text:black;
   --color-high-text: #625858;
-  --color-tint:#f6f6f6;
+  --color-tint: #b7b7b7;
   --color-background:white;
   --color-hover:#dedede;
   --font-size:14px;
