'完成了首页详情页以及购物车，以及bug排除'

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,7 +2,7 @@
 
 :root {
   --color-text:black;
-  --color-high-text: #625858;
+  --color-high-text: #8f8e8e;
   /*--color-tint: #b7b7b7;*/
   --color-tint: #f0f0f0;
   --color-background:white;
