'完成了分类页面'

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -4,7 +4,7 @@
   --color-text:black;
   --color-high-text: #8f8e8e;
   /*--color-tint: #b7b7b7;*/
-  --color-tint: #f0f0f0;
+  --color-tint: #dddddd;
   --color-background:white;
   --color-hover:#dedede;
   --font-size:14px;
